--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_executable(fuzzthat fuzzthat.cc)
-target_link_libraries(fuzzthat ${CJ_LIBS_TO_LINK} ${CJ_LIB_NAME})
+target_link_libraries(fuzzthat ${CJ_LIBS_TO_LINK})
