--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,14 +74,17 @@ if(CJ_BENCH)
   add_subdirectory(bench)
 endif()
 
-if(CJ_TEST OR CJ_EXAMPLES)
+if(CJ_TEST)
   enable_testing()
-  file(COPY data DESTINATION .)
   add_subdirectory(test)
 endif()
 
 if(CJ_EXAMPLES)
   add_subdirectory(examples)
+endif()
+
+if(CJ_TEST OR CJ_EXAMPLES)
+  file(COPY data DESTINATION .)
 endif()
 
 if(CJ_PYTHON)
@@ -100,8 +103,6 @@ message(STATUS "CONJUNCTION BUILD SUMMARY")
 message(STATUS "  CMAKE_GENERATOR                  : ${CMAKE_GENERATOR}")
 message(STATUS "  Build type                       : ${CMAKE_BUILD_TYPE}")
 message(STATUS "  Compiler ID                      : ${CMAKE_CXX_COMPILER_ID}")
-message(STATUS "  Library type                     : ${CJ_LIB_TYPE}")
-message(STATUS "  Library name                     : ${CJ_LIB_NAME}")
 message(STATUS "  Tests                            : ${CJ_TEST}")
 message(STATUS "  Examples                         : ${CJ_EXAMPLES}")
 message(STATUS "  Benchmarks                       : ${CJ_BENCH}")
