add functions to get set/multiset of key/values from bounded multimaps, improves map_traits

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,12 +69,12 @@ endif()
 
 # Add subdirectories:
 
-if(CJ_BENCH)
-  add_subdirectory(bench)
+if(CJ_BENCH OR CJ_TEST OR CJ_EXAMPLES)
+  file(COPY data DESTINATION .)
 endif()
 
-if(CJ_TEST OR CJ_EXAMPLES)
-  file(COPY data DESTINATION .)
+if(CJ_BENCH)
+  add_subdirectory(bench)
 endif()
 
 if(CJ_TEST)
@@ -99,14 +99,12 @@ message(STATUS "  CMAKE_GENERATOR                  : ${CMAKE_GENERATOR}")
 message(STATUS "  Build type                       : ${CMAKE_BUILD_TYPE}")
 message(STATUS "  Compiler ID                      : ${CMAKE_CXX_COMPILER_ID}")
 message(STATUS "  Tests                            : ${CJ_TEST}")
-message(STATUS "  Examples                         : ${CJ_EXAMPLES}")
 message(STATUS "  Benchmarks                       : ${CJ_BENCH}")
+message(STATUS "  Examples                         : ${CJ_EXAMPLES}")
 message(STATUS "  Python module                    : ${CJ_PYTHON}")
-message(STATUS "  Position-independant library     : ${CJ_PI}")
-message(STATUS "  Link statically to stdlibc++     : ${CJ_STATIC_STD}")
 message(STATUS "  Sanitize flags                   : ${CJ_SANITIZE}")
 message(STATUS "  Eigen3's path                    : ${EIGEN_INCLUDE_DIR}")
-message(STATUS "  Libs to link                     : ${libs_to_link}")
+message(STATUS "  Libs to link                     : ${CJ_LIBS_TO_LINK}")
 message(STATUS "  C++ flags                        : ${CMAKE_CXX_FLAGS}")
 if(CMAKE_BUILD_TYPE MATCHES RELEASE)
   message(STATUS "  C++'s release flags              : ${CMAKE_CXX_FLAGS_RELEASE}")
