--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,8 +8,8 @@ set(test_src run_all.cc
   math/truth_spec.cc
   math/confusion_spec.cc
   math/set_spec.cc
-  utils/top_n_map.cc
-  utils/top_n_set.cc
+  utils/top_n_map_spec.cc
+  utils/top_n_set_spec.cc
 )
 
 add_executable(test_cj ${test_src})
