--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,6 +4,7 @@ include_directories(./gtest/googletest/include)
 
 set(test_src run_all.cc
   logics/fuzzy_classifier_spec.cc
+  logics/clause_spec.cc
   data/data_matrix_spec.cc
   math/truth_spec.cc
   math/confusion_spec.cc
