--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,6 +6,7 @@ set(test_src run_all.cc
   logics/fuzzy_classifier_spec.cc
   logics/clause_spec.cc
   logics/clausal_kb_spec.cc
+#  logics/formula_spec.cc
   data/data_matrix_spec.cc
   math/truth_spec.cc
   math/confusion_spec.cc
